2014-10-22  Albert Chu <chu11@llnl.gov>

	* ipmi-chassis/ipmi-chassis-argp.c: Options now require arguments,
	remove OPTION_ARG_OPTIONAL flag in parsing.
	
2014-10-21  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/: Fix corner case with empty lines when inputting
	commands via standard in or --file.
	
2014-10-14  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add notes on ipmitool vs ipmi-sensors
	"ok" reading.

2014-08-19 Mark Rusk <mark.rusk@hp.com>

	* libfreeipmi/locate/ipmi-locate-dmidecode.c: Fix multiple UEFI
	bugs.  Remove assumption EFI only works with IA64.  Fix endline
	parse issue.
	
2014-08-14  Albert Chu <chu11@llnl.gov>

	* Support SSIF IPMB bridging.
	
2014-07-15  Markus Blank-Burian <burian@muenster.de>

	* Support Supermicro H8DGU and H8DG6 systems.
	
2014-07-14  Yaroslav Halchenko <debian@onerussian.com>

	* Fix various typos in code and documentation.

2014-07-10  Albert Chu <chu11@llnl.gov>

	* man/libipmiconsole.3.pre.in: Document libipmiconsole.conf manpage.
	
2014-07-01  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/ipmiconsole_processing.c (_check_payload_sizes_legitimate):
	Fix max_sol_character_send_size corner case calculation.  Should
	be based on "inbound" size not "outbound" size.
	
2014-05-30  Shashi Dande <Shashi.Dande@hp.com>

	* libfreeipmi/api/ipmi-ssif-driver-api.h,
	libfreeipmi/api/ipmi-ssif-driver-api.c (api_ssf_cmd): Retry reads
	as needed.
	
2014-05-07  Klaus Kaempf <kkaempf@suse.de>

	* ipmipower/ipmipower_ping.c: Fix compile bug.
	
2014-03-19  Albert Chu <chu11@llnl.gov>

	* ipmipower/: Support 'ipmiping' workaround.
	
2014-03-19  David Binderman <dcb314@hotmail.com>
	
	* libfreeipmi/interpret/ipmi-interpret.c: Fix leap before you look
	bugs.
	
2014-03-13  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Support Supermicro get-power-supply-status
	and get-pmbus-power-supply-status commands.
	
2014-03-12  Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: Add notes on ipmi-detect for IPMI
	discovery.
	